# rye-python-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  help.mk  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/workflows/: ci.yaml
src/app/: main.py
src/app/adapters/: models.py
src/app/adapters/db/: __init__.py  base_repository.py  gateway_facade.py  sqlachemy.py
src/app/adapters/db/alembic/: env.py  script.py.mako
src/app/adapters/db/alembic/versions/: e631d795d8ae_init.py
src/app/adapters/db/user/: repository.py  service.py  table.py
src/app/adapters/http/: endpoints.py  htmx.py
src/app/entrypoints/: api.py
src/app/entrypoints/templates/: _layout.html  index.html
src/app/interfaces/: base.py  db.py  templates.py
src/app/use_cases/: user.py
src/fastapi_pydantic2/: __init__.py
src/tests/: conftest.py  test_app.py
